--- a/www/views/entity/Study/SV_summary.haml
+++ b/www/views/entity/Study/SV_summary.haml
@@ -12,7 +12,7 @@
 
 - pvalues.each do |field|
   - header field, "NumericValue"
-- header "Fusion donors", "Sample"
+- header "Fusion donors", "Sample", :cohort => entity
 = table do
   - tsv
 
