--- a/www/views/entity_list/Sample/characteristic_alterations.haml
+++ b/www/views/entity_list/Sample/characteristic_alterations.haml
@@ -10,6 +10,7 @@
 
   - donors = all_donors
 
+  - log :finding_genes, "Finding genes affected in donor list"
   - donor_genes = {}
   - donors.each do |donor|
     - if database.to_s == 'none'
@@ -18,6 +19,7 @@
       - donor_genes[donor] = Gene.setup(donor.get_genes(:affected), "Ensembl Gene ID", PCAWG.organism)
 
   - if database.to_s != "none"
+    - log :finding_annotations, "Finding database annotations for genes in donor list"
     - file, options = Enrichment::REGISTRY[database]
     - identifier_file = Organism.identifiers(PCAWG.organism)
     - file = file.sub("NAMESPACE", PCAWG.organism)
@@ -36,6 +38,7 @@
 
   - gene_pvalues = {}
   - selected_class = all_donors.collect{|d| list.include?(d) ? 1 : 0 }
+  - log :classify, "Classifying donor by gene status and calculating p-values"
   - donor_genes.values.flatten.uniq.each do |gene|
     - gene_class = all_donors.collect{|d| (donor_genes[d] && donor_genes[d].include?(gene)) ? 1 : 0 }
     - next if gene_class.select{|v| v == 1}.length < 3
